body overflow-x fixed

--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -201,7 +201,7 @@ header {
       header #bottom .content p {
         font-family: "News Cycle", arial, sans-serif; }
   header.active {
-    left: 300px !important; }
+    left: 300px; }
 
 main {
   position: fixed;
@@ -386,6 +386,9 @@ section#about {
   header section#top figure figcaption #job {
     font-size: 16px; } }
 @media only screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden; }
+
   header {
     width: 100%;
     min-height: 325px;
@@ -398,6 +401,8 @@ section#about {
         margin: 0; }
       header #top #love {
         display: none; }
+    header.active {
+      left: 300px; }
 
   main {
     position: relative;
