--- a/public/assets/stylesheets/sass/_header.scss
+++ b/public/assets/stylesheets/sass/_header.scss
@@ -250,6 +250,6 @@ header {
         }
     }
     &.active {
-        left: 300px !important;
+        left: 300px;
     }
 }
