--- a/public/assets/stylesheets/sass/media-queries/_main.scss
+++ b/public/assets/stylesheets/sass/media-queries/_main.scss
@@ -49,10 +49,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+    body { overflow-x: hidden; }
     header {
         width: 100%;
         min-height: 325px;
         position: relative;
+
         #nav-toggle {
             position: fixed;
         }
@@ -64,6 +66,9 @@
                 }
             }
             #love { display: none; }
+        }
+        &.active {
+            left: 300px;
         }
     }
     main {
